correctly wrap position in CenterDisplayWidget

--- a/viewer/style/widgets.less
+++ b/viewer/style/widgets.less
@@ -478,6 +478,9 @@
 
 &.centerDisplayWidget{
 .smallWidget();
+.widgetData{
+  white-space: pre-wrap;
+}
 .widgetData ~ .widgetData{
   margin-top: 0;
 }
